--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,13 +56,15 @@
       /> 
         src="../assets/images/WhatsApp_Image_2024-11-24_at_6.47.44_PM-removebg-preview.png"
             alt="consolcit"
+                        src="../assets/images/asaar.png"
+
       -->
 
       <p class="footer-copyright mt-3">
         {{ "copyright" | translate }}
         <a rel="noopener" href="https://consolcit.com.sa/" target="_blank"
           ><img
-            src="../assets/images/asaar.png"
+            src="assets/images/asaar.png"
             alt="asser"
                       class="img-fluid logo"
 
