--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -51,16 +51,17 @@
           >
             <i class="bi bi-globe"></i>
           </span>
+              <!-- src="../../../assets/images/saudi-arabia-icon-2048x1365-tq5diktm.png" -->
 
           <div class="dropdown-menu">
             <img
-              src="../../../assets/images/saudi-arabia-icon-2048x1365-tq5diktm.png"
+              src="assets/images/saudi-arabia-icon-2048x1365-tq5diktm.png"
               alt="ar"
               class="dropdown-item"
               (click)="setLanguage('ar')"
             />
             <img
-              src="../../../assets/images/555526.png"
+              src="assets/images/555526.png"
               alt="en"
               class="dropdown-item usa"
               (click)="setLanguage('en')"
@@ -114,7 +115,7 @@
         />
         -->
         <img
-        src="../../../assets/images/asaar.png" 
+        src="assets/images/asaar.png" 
 
           ENB
           alt=""
