--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-center justify-content-center flex-row-reverse">
   <div class="w-100 h-100 d-flex">
     <img
-      src="../../../../assets/images/auth-image.png"
+      src="assets/images/auth-image.png"
       alt=""
       class="auth-left-image position-fixed"
     />
@@ -10,12 +10,13 @@
     <!-- <h4>{{ "login" | translate }}</h4> -->
     <!-- <div class="image-container d-flex justify-content-center align-items-center mb-5"> -->
     <!-- <img
-      src="../../../../assets/Tabouk.png"
+      src="../../../../assets/Tabouk.png"src="../../../../assets/images/auth-image.png"
       alt=""
-      class="img-responsive"
+      class="img-responsive"       src="../../../../assets/images/asaarLogo.png"
+
     />-->
      <img
-      src="../../../../assets/images/asaarLogo.png"
+      src="assets/images/asaarLogo.png"
       alt=""
       class="img-responsive"
     />
