--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,8 +61,8 @@
       -->
 
       <p class="footer-copyright mt-3">
-        {{ "copyright" | translate }}
-        <a rel="noopener" href="https://consolcit.com.sa/" target="_blank"
+        {{ "تم التطوير بواسطة"  }}
+        <a rel="noopener" href="https://asaar.sa/" target="_blank"
           ><img
             src="assets/images/asaar.png"
             alt="asser"
