--- a/src/app/pages/District/add-district/add-district.component.html
+++ b/src/app/pages/District/add-district/add-district.component.html
@@ -21,7 +21,7 @@
                 <div class="col-sm-6"> 
                     <div class="form-group">
                         <label for="notes" class="label">
-                            <h6>    {{'Notes' |translate}}</h6>
+                            <h6>    {{'ملاحظات' }}</h6>
                         </label>
                         <textarea   type="text"
                             formControlName="notes" nbInput shape="round" fullWidth id="notes"></textarea>
@@ -37,7 +37,7 @@
           class="special-button m-2 mt-4 w-100"
    type="submit"
        >
-          {{ "Save" | translate }}
+          {{ "حفظ"  }}
         </button>
       </div>
        <div class="col-md-2">
