--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -69,13 +69,13 @@
           </div>
         </div>
         <button type="button" style="background-color:transparent; border: none;"  (click)="logout()">
-          {{ "logout" | translate }}      
+          {{ "تسجيل الخروج" }}      
           </button>
       </div>
       <div
         class="d-flex align-items-center justify-content-center flex-row-reverse flex-3"
       >
-        <h3>{{ "integratedSurveySystem" | translate }}</h3>
+        <h3>{{ "النظام المتكامل لإدارة المشاريع"  }}</h3>
       </div>
 
       
