--- a/src/app/pages/Milestones/add-milestone/add-milestone.component.html
+++ b/src/app/pages/Milestones/add-milestone/add-milestone.component.html
@@ -90,7 +90,7 @@
           <div class="form-group">
           <label for="FromDate" class="label">
             <h6>
-              {{ "تاريخ المرفق" | translate }}
+              {{ "تاريخ المرفق"  }}
             </h6>
           </label>
           <input
@@ -154,7 +154,7 @@
           class="special-button m-2 mt-4 w-100"
    type="submit"
        >
-          {{ "Save" | translate }}
+          {{ "حفظ"  }}
         </button>
       </div>
        <div class="col-md-2">
