--- a/src/app/pages/Milestones/list-milestone/list-milestone.component.html
+++ b/src/app/pages/Milestones/list-milestone/list-milestone.component.html
@@ -7,7 +7,7 @@
     type="button"
     (click)="ShowAdd()"
   >
-    {{ "Add" | translate }}
+    {{ "إضافة مرفقات المشاريع"  }}
   </button>
   <nb-card class="table-container">
     <table border="1" cellpadding="8" cellspacing="0">
