--- a/src/app/pages/charts/charts.component.html
+++ b/src/app/pages/charts/charts.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2>
-        {{ "statistics" | translate }}
+        {{ "الاحصائيات" }}
       </h2>
       <hr />
     </div>
