--- a/src/app/pages/District/list-district/list-district.component.html
+++ b/src/app/pages/District/list-district/list-district.component.html
@@ -7,7 +7,7 @@
     type="button"
     (click)="ShowAdd()"
   >
-    {{ "Add" | translate }}
+    {{ "إضافة انواع المرفقات"  }}
   </button>
   <nb-card class="table-container">
     <table border="1" cellpadding="8" cellspacing="0">
