--- a/src/app/pages/StrategicGoals/list-strategic-goal/list-strategic-goal.component.html
+++ b/src/app/pages/StrategicGoals/list-strategic-goal/list-strategic-goal.component.html
@@ -1,5 +1,5 @@
 <div class="content-container">
-  <h2> {{'إضافة مشروع' }}
+  <h2> {{'المشاريع' }}
   </h2>
    <hr />
   <button
@@ -7,7 +7,7 @@
     type="button"
     (click)="ShowAdd()"
   >
-    {{ "Add" | translate }}
+    {{ "إضافة مشروع"  }}
   </button>
   <nb-card class="table-container">
     <table border="1" cellpadding="8" cellspacing="0">
