--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -81,7 +81,7 @@
             *ngIf="loading"
             class="spinner-border spinner-border-sm me-1"
           ></span>
-          {{ "login" | translate }}
+          {{ "تسجيل الدخول"  }}
         </button>
 
         <!--               <a routerLink="../signup" class="btn btn-link">{{ "sign-up" | translate }}</a>
