--- a/src/app/pages/charts/charts.component.html
+++ b/src/app/pages/charts/charts.component.html
@@ -20,7 +20,7 @@
               <nb-select
             shape="round"
             fullWidth
-           [placeholder]="'Select' |translate" 
+           [placeholder]="'إختار المشروع' " 
         (selectedChange)="onSelect($event)"
           >
             <nb-option *ngFor="let e of this.options1" [value]="e.id">
