--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,7 @@
         {{ "تم التطوير بواسطة"  }}
         <a rel="noopener" href="https://asaar.sa/" target="_blank"
           ><img
-            src="assets/images/asaar.png"
+            src="assets/images/asaar_1.png"
             alt="asser"
                       class="img-fluid logo"
 
