--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -115,7 +115,7 @@
         />
         -->
         <img
-        src="assets/images/asaar.png" 
+        src="assets/images/asaar_1.png" 
 
           ENB
           alt=""
