--- a/src/app/pages/Milestones/list-milestone/list-milestone.component.html
+++ b/src/app/pages/Milestones/list-milestone/list-milestone.component.html
@@ -9,8 +9,8 @@
   >
     {{ "إضافة مرفقات المشاريع"  }}
   </button>
-  <nb-card class="table-container">
-    <table border="1" cellpadding="8" cellspacing="0">
+  <nb-card >
+<table class="responsive-table">
   <thead>
     <tr>
       <th>اسم المشروع</th>
