--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -16,7 +16,7 @@
 
     />-->
      <img
-      src="assets/images/asaarLogo.png"
+      src="assets/images/AssarLogo-1.png"
       alt=""
       class="img-responsive"
     />
