--- a/src/app/pages/District/list-district/list-district.component.html
+++ b/src/app/pages/District/list-district/list-district.component.html
@@ -9,8 +9,8 @@
   >
     {{ "إضافة انواع المرفقات"  }}
   </button>
-  <nb-card class="table-container">
-    <table border="1" cellpadding="8" cellspacing="0">
+  <nb-card>
+<table class="responsive-table">
   <thead>
     <tr>
       <th>انواع المرفقات</th>
