--- a/src/app/pages/Milestones/list-milestone/list-milestone.component.html
+++ b/src/app/pages/Milestones/list-milestone/list-milestone.component.html
@@ -9,7 +9,7 @@
   >
     {{ "إضافة مرفقات المشاريع"  }}
   </button>
-  <nb-card >
+    <nb-card class="responsive-table-wrapper">
 <table class="responsive-table">
   <thead>
     <tr>
