--- a/src/app/pages/Milestones/list-milestone/list-milestone.component.scss
+++ b/src/app/pages/Milestones/list-milestone/list-milestone.component.scss
@@ -18,37 +18,6 @@ th, td {
 thead {
   background-color: #826026;
   color: white;
-      border: 2px solid #826026; 
-
-}
-.actions {
-  text-align: center;
-}
-
-.actions button {
-  margin: 0 4px;
-}
-*/
-/* fixed-table.component.css */
-/*table {
-  width: 100%;
-  border-collapse: collapse;
-  text-align: left;
-  
-}
-
-th, td {
-  padding: 10px;
-    border: 2px solid #826026; 
-      text-align: center;
-
-
-}
-
-
-thead {
-  background-color: #826026;
-  color: white;
       border: 2px solid #826026;
 
 }
@@ -61,7 +30,7 @@ thead {
 }
 
 */
-
+/*
 .responsive-table {
   width: 100%;
   border-collapse: collapse;
@@ -79,20 +48,83 @@ thead {
 }
 .responsive-table td {
   padding: 10px;
- // border: 1px solid #ddd;
       border: 2px solid #826026; 
       text-align: center;
 
 }
 
-/* Mobile View */
 @media (max-width: 768px) {
 
   .responsive-table thead {
-    //display: none;
+    display: block;
      background-color: #826026;
   color: white;
       border: 2px solid #826026;
+  }
+
+  .responsive-table tr {
+    display: block;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    width: 100%;
+  }
+
+  .responsive-table td {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  .responsive-table td::before {
+    content: attr(data-label);
+    font-weight: bold;
+  }
+}
+*/
+.responsive-table-wrapper {
+  width: 100%;
+  max-width: 100%;
+  min-width: 100%;
+  display: block;
+}
+.responsive-table {
+ // width: 100%;
+    max-width: 100%;
+
+  border-collapse: collapse;
+}
+
+.responsive-table th {
+  background-color: #826026;
+  color: white;
+  border: 2px solid #826026;
+  padding: 10px;
+  text-align: center;
+}
+
+.responsive-table td {
+  padding: 10px;
+  border: 2px solid #826026;
+  text-align: center;
+}
+
+/* Mobile View */
+
+@media (max-width: 768px) {
+
+  .responsive-table {
+    display: block;
+    width: 100%;
+      min-width: 100%;
+
+
+  }
+
+  .responsive-table thead {
+    display: none;
   }
 
   .responsive-table tr {
@@ -104,7 +136,8 @@ thead {
   .responsive-table td {
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
   }
 
   .responsive-table td::before {
