--- a/src/app/pages/StrategicGoals/list-strategic-goal/list-strategic-goal.component.html
+++ b/src/app/pages/StrategicGoals/list-strategic-goal/list-strategic-goal.component.html
@@ -9,7 +9,7 @@
   >
     {{ "إضافة مشروع"  }}
   </button>
-  <nb-card>
+  <nb-card class="responsive-table-wrapper">
 <table class="responsive-table">
   <thead>
     <tr>
