--- a/src/app/pages/Employee/list-employees/list-employees.component.scss
+++ b/src/app/pages/Employee/list-employees/list-employees.component.scss
@@ -1,64 +1,82 @@
-.table-container {
-    border-radius: 2rem;
-    overflow-x: scroll;
-   // overflow-y:visible;
-   
-    overflow-y: auto;
-    //overflow: auto;
-//display: block;
-  }
+/* fixed-table.component.css */
+/*table {
+  width: 100%;
+  border-collapse: collapse;
+  text-align: left;
   
-  table {
-    width: 20rem;
+}
+
+th, td {
+  padding: 10px;
+    border: 2px solid #826026;
+      text-align: center;
+
+
+}
+
+
+thead {
+  background-color: #826026; 
+  color: white;
+      border: 2px solid #826026;
+
+}
+.actions {
+  text-align: center;
+}
+
+.actions button {
+  margin: 0 4px;
+}
+*/
+
+.responsive-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.responsive-table th
+{
+       background-color: #826026;
+         color: white;
+         border: 2px solid #826026; 
+  padding: 10px;
+      text-align: center;
+
+
+}
+.responsive-table td {
+  padding: 10px;
+ // border: 1px solid #ddd;
+      border: 2px solid #826026; 
+      text-align: center;
+
+}
+
+/* Mobile View */
+@media (max-width: 768px) {
+
+  .responsive-table thead {
+    //display: none;
+     background-color: #826026;
+  color: white;
+      border: 2px solid #826026;
   }
 
-  
-  .search-container {
-    margin: 1rem auto;
+  .responsive-table tr {
+    display: block;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+  }
+
+  .responsive-table td {
     display: flex;
-    justify-content: center;
-  }
-  
-  .col-md-4,
-  .col-md-6,
-  .col-md-12 {
-    padding: 5px !important;
-  }
-  
-  .users-table {
-    width: 100%;
-    margin-bottom: 1rem;
-    border-collapse: collapse;
-   // overflow-y: scroll;
-    //display: block;
-  }
-  
-  tr {
-    height: 3.2rem;
-  }
-  
-  th,
-  td {
-    text-align: center !important;
+    justify-content: space-between;
     padding: 10px;
-  //  display: block;
   }
-  
-  th {
-    div {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 1.3rem;
-    }
+
+  .responsive-table td::before {
+    content: attr(data-label);
+    font-weight: bold;
   }
-  
-  ::ng-deep .mat-sort-header-container {
-    display: flex;
-    cursor: pointer;
-    align-items: center;
-    letter-spacing: normal;
-    outline: 0;
-    justify-content: center;
-  }
-  
+}
