--- a/src/app/pages/Departments/list-department/list-department.component.html
+++ b/src/app/pages/Departments/list-department/list-department.component.html
@@ -1,120 +1,49 @@
 <div class="content-container">
-  <h2>  {{ "Departments" | translate }}</h2>
-  <hr />
+  <h2> {{'الوظائف'}}
+  </h2>
+   <hr />
   <button
     class="special-button mb-3"
-    [hidden]="!this.canAdd"
     type="button"
     (click)="ShowAdd()"
   >
-    {{ "Add" | translate }}
+    {{ "إضافة وظيفة"  }}
   </button>
-  <nb-card class="table-container">
-    <table
-      class="users-table table-striped"
-      mat-table
-      [dataSource]="dataSource"
-      matSort
-      (matSortChange)="sortData($event)"
-      matSortDisableClear
-      matSortDirection="asc"
-    >
-      <!-- lawNumber Column -->
-      <ng-container matColumnDef="Department">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ "Department" | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">
-          <!-- {{element.planName}} -->
+  <nb-card>
+<table class="responsive-table">
+  <thead>
+    <tr>
+      <th>الوظائف</th>
+      <th>ملاحظات</th>
 
-          <span *ngIf="element.departmentName == ''; else data">
-            <input
-              type="text"
-              #departmentFilter
-              nbInput
-              class="w-30 mw-30"
-              matInput
-              (keyup)="applyFilter($event)"
-              [placeholder]="'Department' |translate" 
-              class="text-center"
-            />
-          </span>
-          <ng-template #data>
-            <!-- <span>{{ element.departmentName | sliceWords:0:10}}{{"..."}}</span> -->
-            <span>{{ element.departmentName }}</span>
+      <th>التعديل</th>
 
-          </ng-template>
+      <th>الحذف</th>
+    </tr>
+    
+  </thead>
+  <tbody>
+    <tr *ngFor="let row of this.tableData1">
+      <td>{{ row.job }}</td>
+      <td>{{ row.notes }}</td>
+
+        <td class="actions">
+        <button mat-icon-button color="primary" (click)="edit(row)">
+          <mat-icon>edit</mat-icon>
+        </button>
+</td>
+        <td class="actions">
+
+        <button mat-icon-button color="warn" (click)="delete1(row)">
+          <mat-icon>delete</mat-icon>
+        </button>
         </td>
-      </ng-container>
-      <ng-container matColumnDef="MainDepartment">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ "MainDepartment" | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">
-          <!-- {{element.planCode}} -->
-
-          <span *ngIf="element.departmentName == ''; else data"> </span>
-          <ng-template #data>
-<!--             <span>{{ element.mainDeptName | sliceWords:0:10}}{{"..."}}</span>
- -->          
- <span>{{ element.mainDeptName }}</span>
-
-</ng-template>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="Notes">
-        <th mat-header-cell *matHeaderCellDef>{{ "Notes" | translate }}</th>
-        <td mat-cell *matCellDef="let element">
-          <!-- {{element.area}} -->
-          <span *ngIf="element.departmentName == ''; else data"> </span>
-          <ng-template #data>
-            <span>{{ element.desc | sliceWords:0:10}}{{"..."}}</span>
-          </ng-template>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="actions2">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
-          <span *ngIf="element.sortable == false; else data"> </span>
-          <ng-template #data>
-            <span>
-              <button
-                mat-mini-fab
-                color="primary"
-                [hidden]="!this.canEdit"
-                (click)="ShowEdit(element.id)"
-              >
-                <mat-icon>edit</mat-icon>
-              </button>
-            </span>
-          </ng-template>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="actions1">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
-          <span *ngIf="element.sortable == false; else data"> </span>
-          <ng-template #data>
-            <span>
-              <button
-                mat-mini-fab
-                color="warn"
-                [hidden]="!this.canDelete"
-                (click)="delete(element.id, element.departmentName)"
-              >
-                <mat-icon>delete</mat-icon>
-              </button>
-            </span>
-          </ng-template>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
+    </tr>
+  </tbody>
+</table>
+    
   </nb-card>
-  <mat-paginator
+<!--   <mat-paginator
     [dir]="dir"
     [length]="totalRecords"
     [pageIndex]="searchModel.PageNumber - 1"
@@ -122,5 +51,5 @@
     [pageSizeOptions]="pageSizeOptions"
     (page)="search($event)"
     showFirstLastButtons
-  ></mat-paginator>
+  ></mat-paginator> -->
 </div>
