--- a/src/app/pages/Employee/list-employees/list-employees.component.html
+++ b/src/app/pages/Employee/list-employees/list-employees.component.html
@@ -1,143 +1,58 @@
 <div class="content-container">
-  <h5> {{'Employees' |translate}}
-  </h5>
-  <hr/>  
+  <h2> {{'بيانات الموظفيين' }}
+  </h2>
+   <hr />
   <button
     class="special-button mb-3"
-    [hidden]="!this.canAdd"
     type="button"
     (click)="ShowAdd()"
   >
-    {{ "Add" | translate }}
+    {{ "إضافة موظف"  }}
   </button>
+  <nb-card class="responsive-table-wrapper">
+<table class="responsive-table">
+  <thead>
+    <tr>
+      <th>اسم الموظف</th>
+      <th>الوظيفة</th>
+      <th>رقم الجوال</th>
+      <th>البريد الإلكترونى</th>
+      <th>تاريخ التعيين</th>
+      <th>تاريخ الميلاد</th>
 
-  <nb-card class="table-container">
-    <table
-      class="users-table table-striped"
-      mat-table
-      [dataSource]="dataSource"
-      matSort
-      (matSortChange)="sortData($event)"
-      matSortDisableClear
-      matSortDirection="asc"
-    >
-      <!-- lawNumber Column -->
-      <ng-container matColumnDef="Name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ "Name" | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">
-          <!-- {{element.planName}} -->
 
-          <span *ngIf="element.name == ''; else data">
-            <input
-              type="text"
-              #empFilter
-              nbInput
-              class="w-30 mw-30"
-              matInput
-              (keyup)="applyFilter($event)"
-              [placeholder]="'Employee' |translate" 
-              class="text-center"
-            />
-          </span>
-          <ng-template #data>
-<!--             <span>{{ element.name | sliceWords:0:10}}{{"..."}}</span>
- -->      
- <span>{{ element.name }}</span>
+      <th>التعديل</th>
 
-</ng-template>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="Job">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ "Job" | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">
-          <!-- {{element.planCode}} -->
+      <th>الحذف</th>
+    </tr>
+    
+  </thead>
+  <tbody>
+    <tr *ngFor="let row of this.tableData1">
+      <td>{{ row.name }}</td>
+      <td>{{ row.jobname }}</td>
+      <td>{{ row.mobil }}</td>
+      <td>{{ row.email }}</td>
+       <td>{{ row.birthDate }}</td>
+      <td>{{ row.hireDate }}</td>
 
-          <span *ngIf="element.name == ''; else data"> </span>
-          <ng-template #data>
-<!--             <span>{{ element.jobName | sliceWords:0:10}}{{"..."}}</span>
- -->          
- <span>{{ element.jobName }}</span>
+        <td class="actions">
+        <button mat-icon-button color="primary" (click)="edit(row)">
+          <mat-icon>edit</mat-icon>
+        </button>
+</td>
+        <td class="actions">
 
-</ng-template>
+        <button mat-icon-button color="warn" (click)="delete1(row)">
+          <mat-icon>delete</mat-icon>
+        </button>
         </td>
-      </ng-container>
-      <ng-container matColumnDef="Mobil">
-        <th mat-header-cell *matHeaderCellDef>{{ "Mobil" | translate }}</th>
-        <td mat-cell *matCellDef="let element">
-          <!-- {{element.area}} -->
-          <span *ngIf="element.mobil == ''; else data"> </span>
-          <ng-template #data>
-            <span>{{ element.mobil }}</span>
-          </ng-template>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="Phone">
-        <th mat-header-cell *matHeaderCellDef>{{ "Phone" | translate }}</th>
-        <td mat-cell *matCellDef="let element">
-          <!-- {{element.area}} -->
-          <span *ngIf="element.name == ''; else data"> </span>
-          <ng-template #data>
-            <span>{{ element.phone }}</span>
-          </ng-template>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="Email">
-        <th mat-header-cell *matHeaderCellDef>{{ "Email" | translate }}</th>
-        <td mat-cell *matCellDef="let element">
-          <!-- {{element.area}} -->
-          <span *ngIf="element.name == ''; else data"> </span>
-          <ng-template #data>
-            <span>{{ element.email }}</span>
-          </ng-template>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="actions2">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
-          <span *ngIf="element.sortable == false; else data"> </span>
-          <ng-template #data>
-            <span>
-              <button
-                mat-mini-fab
-                color="primary"
-                [hidden]="!this.canEdit"
-                (click)="ShowEdit(element.id)"
-              >
-                <mat-icon>edit</mat-icon>
-              </button>
-            </span>
-          </ng-template>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="actions1">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
-          <span *ngIf="element.sortable == false; else data"> </span>
-          <ng-template #data>
-            <span>
-              <button
-                mat-mini-fab
-                color="warn"
-                [hidden]="!this.canDelete"
-                (click)="delete(element.id, element.name)"
-              >
-                <mat-icon>delete</mat-icon>
-              </button>
-            </span>
-          </ng-template>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
+    </tr>
+  </tbody>
+</table>
+    
   </nb-card>
-  <mat-paginator
+<!--   <mat-paginator
     [dir]="dir"
     [length]="totalRecords"
     [pageIndex]="searchModel.PageNumber - 1"
@@ -145,5 +60,5 @@
     [pageSizeOptions]="pageSizeOptions"
     (page)="search($event)"
     showFirstLastButtons
-  ></mat-paginator>
+  ></mat-paginator> -->
 </div>
