--- a/src/app/pages/Services/add-service/add-service.component.html
+++ b/src/app/pages/Services/add-service/add-service.component.html
@@ -1,141 +1,252 @@
-<div class="content-container mt-5">
-  <h5>{{'Add' |translate}} {{'Services' |translate}}
+<div class="content-container mt-0.5">
+  <h5>{{'إضافة عميل' }}
   </h5>
   <hr/>
-  <form [formGroup]="serviceForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="StrategicGoalsForm" (ngSubmit)="onSubmit()">
     <div class="row">
       <div class="col-sm-6">
-        <!--categoryName -->
+        <!--Law number -->
         <div class="form-group">
-          <label for="Service" class="label">
+          <label for="CustName" class="label">
             <h6>
-              {{ "Service" | translate }}
+              {{ "إسم العميل"  }}
             </h6>
           </label>
           <input
             type="text"
-            formControlName="service"
+           
+            formControlName="strategicGoal"
             nbInput
             shape="round"
             fullWidth
-            id="service"
+            id="strategicGoal"
           />
-          <mat-error
-            *ngIf="fc.service.touched && fc.service.hasError('required')"
-          >
-            {{ "Service is required" | translate }}
-          </mat-error>
-          <mat-error
-            *ngIf="
-              fc.service.touched &&
-              fc.service.hasError('minlength') &&
-              !fc.service.hasError('required')
-            "
-          >
-            {{ "min length 3 Letters" | translate }}
-          </mat-error>
+          
         </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="form-group">
-          <label for="Service Desc" class="label">
+           <div class="form-group">
+          <label for="StrategicGoal" class="label">
             <h6>
-              {{ "Service Desc" | translate }}
+              {{ "نوع العميل"}}
+            </h6>
+          </label>
+          <nb-select
+            shape="round"
+            fullWidth
+            formControlName="custId"
+          
+          
+          >
+            <nb-option *ngFor="let e of this.options" [value]="e.id">
+              {{ e.label }}</nb-option
+            >
+          </nb-select>
+
+        </div>
+          <div class="form-group">
+          <label for="StrategicGoal" class="label">
+            <h6>
+              {{ "رقم الجوال"  }}
             </h6>
           </label>
           <input
             type="text"
-            formControlName="serviceDesc"
+          
+            formControlName="Mobil"
             nbInput
             shape="round"
             fullWidth
-            id="serviceDesc"
+            id="Mobil"
+          />
+         
+        </div>
+          <div class="form-group">
+          <label for="StrategicGoal" class="label">
+            <h6>
+              {{ "البريد الإلكترونى"  }}
+            </h6>
+          </label>
+          <input
+            type="text"
+          
+            formControlName="Email"
+            nbInput
+            shape="round"
+            fullWidth
+            id="Email"
+          />
+         
+        </div>
+        
+         <div class="form-group">
+          <label for="StrategicGoal" class="label">
+            <h6>
+              {{ "العنوان"}}
+            </h6>
+          </label>
+        <input
+            type="text"
+          
+            formControlName="Address"
+            nbInput
+            shape="round"
+            fullWidth
+            id="Address"
           />
 
-          <!--  <mat-error
-                                *ngIf="fc.userName.touched && fc.fullName.hasError('minlength') && !fc.fullName.hasError('required')">
-                                {{'min length 3 Letters' | translate}}
-                            </mat-error> -->
         </div>
+       
+           <div class="form-group">
+          <label for="StrategicGoal" class="label">
+            <h6>
+              {{ "جهة الاتصال الأولى" }}
+            </h6>
+          </label>
+          <input
+            type="text"
+        
+            formControlName="ContactPersonNm1"
+            nbInput
+            shape="round"
+            fullWidth
+            id="ContactPersonNm1"
+          />
+       
+        </div>
+        
+        
       </div>
 
       <div class="col-sm-6">
-        <div class="form-group mt-2">
-          <label for="Employee" class="label">
+          <div class="form-group">
+          <label for="StrategicGoal" class="label">
             <h6>
-              {{ "Employee" | translate }}
+              {{ "رقم  الجوال" }}
             </h6>
           </label>
-          <nb-select
+          <input
+            type="text"
+        
+            formControlName="ContactPersonMobil1"
+            nbInput
             shape="round"
             fullWidth
-            formControlName="empId"
-            id="empId"
-            (selectedChange)="selectChangeHandlerEmp($event)"
-          >
-            <!-- <nb-option value="">{{ "No data selected" | translate }}</nb-option> -->
-            <nb-option *ngFor="let e of emp" [value]="e.id">
-              {{ e.name }}</nb-option
-            >
-          </nb-select>
+            id="ContactPersonMobil1"
+          />
+       
         </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="form-group mt-2">
-          <label for="Department" class="label">
+          <div class="form-group">
+          <label for="StrategicGoal" class="label">
             <h6>
-              {{ "Department" | translate }}
+              {{ "البريد الإلكترونى" }}
             </h6>
           </label>
-          <nb-select
+          <input
+            type="text"
+        
+            formControlName="ContactPersonEmail1"
+            nbInput
             shape="round"
             fullWidth
-            formControlName="deptId"
-            id="deptId"
-            (selectedChange)="selectChangeHandlerDept($event)"
-          >
-            <!-- <nb-option value="">{{ "No data selected" | translate }}</nb-option> -->
-            <nb-option *ngFor="let e of department" [value]="e.id">
-              {{ e.departmentName }}</nb-option
-            >
-          </nb-select>
+            id="ContactPersonEmail1"
+          />
+       
         </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="form-group mt-2">
-          <label for="Goals" class="label">
+        <!--Message arabic -->
+          <div class="form-group">
+               <div class="form-group">
+          <label for="StrategicGoal" class="label">
             <h6>
-              {{ "Goals" | translate }}
+              {{ "جهة الاتصال الثانية" }}
             </h6>
           </label>
+          <input
+            type="text"
+        
+            formControlName="ContactPersonNm2"
+            nbInput
+            shape="round"
+            fullWidth
+            id="ContactPersonNm2"
+          />
+       
+        </div>
+          <div class="form-group">
+          <label for="StrategicGoal" class="label">
+            <h6>
+              {{ "رقم الجوال" }}
+            </h6>
+          </label>
+          <input
+            type="text"
+        
+            formControlName="ContactPersonMobil2"
+            nbInput
+            shape="round"
+            fullWidth
+            id="ContactPersonMobil2"
+          />
+       
+        </div>
+          <div class="form-group">
+          <label for="StrategicGoal" class="label">
+            <h6>
+              {{ "البريد الإلكترونى" }}
+            </h6>
+          </label>
+          <input
+            type="text"
+        
+            formControlName="ContactPersonEmail2"
+            nbInput
+            shape="round"
+            fullWidth
+            id="ContactPersonEmail2"
+          />
+       
+        </div>
+          <!-- <mat-error
+            *ngIf="fc.fromDate.touched && fc.fromDate.hasError('required')"
+          >
+            {{ "Start Date is Required" | translate }}
+          </mat-error> -->
+        </div>
+      
 
-          <nb-select
-            class="mt-2"
+      
+        <div class="form-group">
+          <label for="GoalDesc" class="label">
+            <h6>
+              {{ "ملاحظات"  }}
+            </h6>
+          </label>
+          <textarea
+            type="text"
+            formControlName="goalDesc"
+            nbInput
             shape="round"
             fullWidth
-            multiple
-            formControlName="goalId"
-            id="goalId"
-            (selectedChange)="selectChangeHandlerGoals($event)"
+            id="goalDesc"
           >
-            <!-- <nb-option value="">{{ "No data selected" | translate }}</nb-option> -->
-            <nb-option *ngFor="let g of GoalsModel" [value]="g.id">
-              {{ g.directiveGoal }}</nb-option
-            >
-          </nb-select>
+          </textarea>
         </div>
       </div>
-
-      <!--Event Image -->
     </div>
-    <div class="row mt-2">
+    <div class="row mt-2" >
       <div class="col-md-2">
         <button
           class="special-button m-2 mt-4 w-100"
-          [disabled]="serviceForm.invalid || isSubmitted"
-          type="submit"
-        >
-          {{ "Save" | translate }}
+   type="submit"
+       >
+          {{ "حفظ"  }}
+        </button>
+      </div>
+       <div class="col-md-2">
+        <button
+          class="special-button m-2 mt-4 w-100"
+   type="button"    (click)="Close()"
+
+       >
+          {{ "إلغاء"}}
         </button>
       </div>
     </div>
