--- a/src/app/pages/Services/list-service/list-service.component.html
+++ b/src/app/pages/Services/list-service/list-service.component.html
@@ -1,175 +1,64 @@
 <div class="content-container">
-  <h2>{{'Services' |translate}}
+  <h2> {{'العملاء' }}
   </h2>
-  <hr/>  
+   <hr />
   <button
     class="special-button mb-3"
-    [hidden]="!this.canAdd"
     type="button"
     (click)="ShowAdd()"
   >
-    {{ "Add" | translate }}
+    {{ "إضافة عميل"  }}
   </button>
-  <nb-card class="table-container">
-    <table
-      class="users-table table-striped"
-      mat-table
-      [dataSource]="dataSource"
-      matSort
-      (matSortChange)="sortData($event)"
-      matSortDisableClear
-      matSortDirection="asc"
-    >
-      <!-- lawNumber Column -->
-      <ng-container matColumnDef="Service">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ "Service" | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">
-          <!-- {{element.planName}} -->
+  <nb-card class="responsive-table-wrapper">
+<table class="responsive-table">
+  <thead>
+    <tr>
+      <th>اسم العميل</th>
+      <th>نوع العميل</th>
+      <th>رقم الموبيل</th>
+      <th>البريد الإلكترونى</th>
+      <th>جهة الاتصال الأولى</th>
+      <th>رقم الجوال</th>
+      <th>البريد الإلكترونى</th>
+     <th>جهة الاتصال الثانية</th>
+      <th>رقم الجوال</th>
+      <th>البريد الإلكترونى</th>
 
-          <span *ngIf="element.serviceName == ''; else data">
-            <input
-              type="text"
-              #serviceFilter
-              nbInput
-              class="w-30 mw-30"
-              matInput
-              (keyup)="applyFilter($event)"
-              [placeholder]="'Service' |translate" 
-                            class="text-center"
-            />
-          </span>
-          <ng-template #data>
-<!--             <span>{{ element.serviceName | sliceWords:0:10}}{{"..."}}</span>
- -->         
- <span>{{ element.serviceName }}</span>
+      <th>التعديل</th>
 
-</ng-template>
+      <th>الحذف</th>
+    </tr>
+    
+  </thead>
+  <tbody>
+    <tr *ngFor="let row of this.tableData1">
+      <td>{{ row.name }}</td>
+      <td>{{ row.clientType }}</td>
+      <td>{{ row.mobil }}</td>
+      <td>{{ row.email }}</td>
+       <td>{{ row.contactPersomNm1 }}</td>
+      <td>{{ row.ContactPerson1Mobil }}</td>
+      <td>{{ row.ContactPerson1Email }}</td>
+      <td>{{ row.contactPersomNm2 }}</td>
+      <td>{{ row.ContactPerson1Mobi2 }}</td>
+      <td>{{ row.ContactPerson1Emai2 }}</td>
+        <td class="actions">
+        <button mat-icon-button color="primary" (click)="edit(row)">
+          <mat-icon>edit</mat-icon>
+        </button>
+</td>
+        <td class="actions">
+
+        <button mat-icon-button color="warn" (click)="delete1(row)">
+          <mat-icon>delete</mat-icon>
+        </button>
         </td>
-      </ng-container>
-      <ng-container matColumnDef="Employee">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ "Employee" | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">
-          <!-- {{element.planCode}} -->
-
-          <span *ngIf="element.name == ''; else data">
-            <input
-              type="text"
-              #empFilter
-              nbInput
-              class="w-30 mw-30"
-              matInput
-              (keyup)="applyFilter($event)"
-              [placeholder]="'Employee' |translate" 
-              class="text-center"
-            />
-          </span>
-          <ng-template #data>
-<!--             <span>{{ element.name | sliceWords:0:10}}{{"..."}}</span>
- -->
-            <span>{{ element.name }}</span>
-
-          </ng-template>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="Department">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ "Department" | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">
-          <!-- {{element.planCode}} -->
-
-          <span *ngIf="element.departmentName == ''; else data">
-            <input
-              type="text"
-              #departmentFilter
-              nbInput
-              class="w-30 mw-30"
-              matInput
-              (keyup)="applyFilter($event)"
-              [placeholder]="'Department' |translate" 
-              class="text-center"
-            />
-          </span>
-          <ng-template #data>
-<!--             <span>{{ element.departmentName | sliceWords:0:10}}{{"..."}}</span>
- -->          
- <span>{{ element.departmentName}}</span>
-
-</ng-template>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="Goals">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ "Goals" | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">
-          <!-- {{element.planCode}} -->
-
-          <span *ngIf="element.serviceName == ''; else data">
-            <!-- <input type="text"
-                    #departmentFilter
-                    nbInput
-                    class="w-30 mw-30"
-                    matInput
-                    (keyup)="applyFilter($event)"
-                    placeholder="الادارة"
-                    class="text-center"
-                  />-->
-          </span>
-          <ng-template #data>
-            <span>{{ element.objectiveNames }}</span>
-          </ng-template>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="actions2">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
-          <span *ngIf="element.sortable == false; else data"> </span>
-          <ng-template #data>
-            <span>
-              <button
-                mat-mini-fab
-                color="primary"
-                [hidden]="!this.canEdit"
-                (click)="ShowEdit(element.id)"
-              >
-                <mat-icon>edit</mat-icon>
-              </button>
-            </span>
-          </ng-template>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="actions1">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
-          <span *ngIf="element.sortable == false; else data"> </span>
-          <ng-template #data>
-            <span>
-              <button
-                mat-mini-fab
-                color="warn"
-                [hidden]="!this.canDelete"
-                (click)="delete(element.id, element.serviceName)"
-              >
-                <mat-icon>delete</mat-icon>
-              </button>
-            </span>
-          </ng-template>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
+    </tr>
+  </tbody>
+</table>
+    
   </nb-card>
-  <mat-paginator
+<!--   <mat-paginator
     [dir]="dir"
     [length]="totalRecords"
     [pageIndex]="searchModel.PageNumber - 1"
@@ -177,5 +66,5 @@
     [pageSizeOptions]="pageSizeOptions"
     (page)="search($event)"
     showFirstLastButtons
-  ></mat-paginator>
+  ></mat-paginator> -->
 </div>
