--- a/src/app/pages/Services/list-service/list-service.component.html
+++ b/src/app/pages/Services/list-service/list-service.component.html
@@ -20,9 +20,9 @@
       <th>جهة الاتصال الأولى</th>
       <th>رقم الجوال</th>
       <th>البريد الإلكترونى</th>
-     <th>جهة الاتصال الثانية</th>
+     <!-- <th>جهة الاتصال الثانية</th>
       <th>رقم الجوال</th>
-      <th>البريد الإلكترونى</th>
+      <th>البريد الإلكترونى</th> -->
 
       <th>التعديل</th>
 
@@ -39,9 +39,9 @@
        <td>{{ row.contactPersomNm1 }}</td>
       <td>{{ row.ContactPerson1Mobil }}</td>
       <td>{{ row.ContactPerson1Email }}</td>
-      <td>{{ row.contactPersomNm2 }}</td>
+<!--       <td>{{ row.contactPersomNm2 }}</td>
       <td>{{ row.ContactPerson1Mobi2 }}</td>
-      <td>{{ row.ContactPerson1Emai2 }}</td>
+      <td>{{ row.ContactPerson1Emai2 }}</td> -->
         <td class="actions">
         <button mat-icon-button color="primary" (click)="edit(row)">
           <mat-icon>edit</mat-icon>
