--- a/src/app/pages/Services/list-service/list-service.component.scss
+++ b/src/app/pages/Services/list-service/list-service.component.scss
@@ -8,7 +8,7 @@
 
 th, td {
   padding: 10px;
-    border: 2px solid #826026; 
+    border: 2px solid #826026;
       text-align: center;
 
 
@@ -16,7 +16,7 @@ th, td {
 
 
 thead {
-  background-color: #826026;
+  background-color: #826026; 
   color: white;
       border: 2px solid #826026;
 
@@ -28,9 +28,8 @@ thead {
 .actions button {
   margin: 0 4px;
 }
-
 */
-/*
+
 .responsive-table {
   width: 100%;
   border-collapse: collapse;
@@ -48,15 +47,17 @@ thead {
 }
 .responsive-table td {
   padding: 10px;
+ // border: 1px solid #ddd;
       border: 2px solid #826026; 
       text-align: center;
 
 }
 
+/* Mobile View */
 @media (max-width: 768px) {
 
   .responsive-table thead {
-    display: block;
+    //display: none;
      background-color: #826026;
   color: white;
       border: 2px solid #826026;
@@ -66,75 +67,12 @@ thead {
     display: block;
     margin-bottom: 15px;
     border: 1px solid #ccc;
-    width: 100%;
   }
 
   .responsive-table td {
     display: flex;
     justify-content: space-between;
     padding: 10px;
-
-    width: 100%;
-    box-sizing: border-box;
-  }
-
-  .responsive-table td::before {
-    content: attr(data-label);
-    font-weight: bold;
-  }
-}
-*/
-.responsive-table-wrapper {
-  width: 100%;
-  max-width: 100%;
-  display: block;
-}
-.responsive-table {
- // width: 100%;
-    max-width: 100%;
-
-  border-collapse: collapse;
-}
-
-.responsive-table th {
-  background-color: #826026;
-  color: white;
-  border: 2px solid #826026;
-  padding: 10px;
-  text-align: center;
-}
-
-.responsive-table td {
-  padding: 10px;
-  border: 2px solid #826026;
-  text-align: center;
-}
-
-/* Mobile View */
-
-@media (max-width: 768px) {
-
-  .responsive-table {
-    display: block;
-    width: 100%;
-
-  }
-
-  .responsive-table thead {
-    display: none;
-  }
-
-  .responsive-table tr {
-    display: block;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-  }
-
-  .responsive-table td {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    box-sizing: border-box;
   }
 
   .responsive-table td::before {
