--- a/src/app/pages/Departments/list-department/list-department.component.html
+++ b/src/app/pages/Departments/list-department/list-department.component.html
@@ -9,9 +9,8 @@
   >
     {{ "إضافة وظيفة"  }}
   </button>
-  <nb-card>
-<table class="responsive-table">
-  <thead>
+ <nb-card class="responsive-table-wrapper">
+<table class="responsive-table">  <thead>
     <tr>
       <th>الوظائف</th>
       <th>ملاحظات</th>
